# hardware-intelligence-agent

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  tasklist.md
.github/: FUNDING.yml  README.md  SEO_CONFIG.md  github-optimization.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/api/: API参考文档.md
docs/design/: 系统架构和通信协议.md  音频处理和AI算法.md
docs/planning/: ROADMAP.md  产品规划和商业战略.md  第一阶段完成总结.md  资料收集报告.md  项目管理和质量保证.md  项目管理计划.md
docs/tutorials/: 开发板用户手册.md  开发环境配置和工具.md  示例代码和Demo收集.md
examples/ai/: wake_word_detection.c
examples/audio/: audio_capture.c
examples/basic/: CMakeLists.txt  gpio_control.c  hello_world.c  prj.conf
examples/network/: wifi_connect.c
resources/: SDK和工具链资料.md  硬件设计资料收集.md  社区资源和应用案例.md
resources/references/: CSK6_开源资源链接.md  CSK6官方文档获取指南.md  聆思官方文档索引.md
